[package]
name = "fldmirr"
authors = ["sponge2"]
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json={version = "1.0", features = ["preserve_order"]}
serde={version = "1.0.219", features = ["derive"]}
jni="0.21.1"
eframe={version = "0.31.1", features = [
    "glow",
    "persistence",
]}
egui_plot="0.32.1"
rfd="0.15.3"
image={version = "0.24", features = ["png"]}